--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.9",
     "geist": "1.2.2",
-    "next": "canary",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "sugar-high": "^0.6.0",
     "typescript": "5.3.3"
