--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.441.0",
+    "kinet": "^2.2.1",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-rough-notation": "^1.0.5"
   },
   "devDependencies": {
