--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.9",
     "kinet": "^2.2.1",
+    "lucide-react": "^0.453.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
